# SiteLink_Scraper

./: .gitignore  README.md  data_website.json  json_data_for_link.json  link_scraper.py  pyproject.toml  tests_web_scraper_pytest.py
