[tool.poetry]
name = "sitelink-scraper"
version = "0.1.0"
description = ""
authors = ["Saifulina Anna <saifulianna.it@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.16.0"
isort = "^5.13.2"
black = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
